Escrita da seção 'About'

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
               <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
               <p>Portuguese</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%">100%</div>
               </div>
               <p>English</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:5%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:5%">5%</div>
               </div>
               <p>Spanish</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:5%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:5%">5%</div>
               </div>
               <br>
             </div>
@@ -82,7 +82,9 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
-            <p>TODO</p>
+            <p>Atualmente estou trabalhando na empresa Fractalia técnologia (Cargo: Analista de Suporte Técnico), onde sou responsável por atender demandas de projetos.
+              Estudo programação Atualmente na liguagem voltada a Java todo conceito a orientação a objeto e programação funcional, estou fazendo BootCamp com a DIO no momento.
+            </p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
