--- a/index.html
+++ b/index.html
@@ -96,15 +96,16 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Secom do Brasil, Analista de Suporte Jr</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro - 2011 - Março - 2015</h6>
+              <p>Efetuando suporte técnico interno e em campo em equipamentos e softwares customizados em
+                vários projetos, efetuando manutenções e configurações sistemas desenvolvidos em VB6, ASP e. NET SQL Server, IIS, configuração de rede.</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p><br>
+              <h5 class="w3-opacity"><b>Sonda / Telefônica, Analista de Suporte Field</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2017 - Março 2022</h6>
+              <p>Realizando instalação e configuração de softwares, solução de problemas técnicos entre outros.</p><br>
             </div>
           </div>
   
