Work Experience - Atualizado

--- a/index.html
+++ b/index.html
@@ -90,22 +90,23 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-              <p>TODO</p>
-              <hr>
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>Secom do Brasil, Analista de Suporte Jr</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro - 2011 - Março - 2015</h6>
-              <p>Efetuando suporte técnico interno e em campo em equipamentos e softwares customizados em
+              <h5 class="w3-opacity"><b>Secom do Brasil, Analista de Suporte</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro - 2011 - Março - 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+              <p>fetuando suporte técnico interno e em campo em equipamentos e softwares customizados em
                 vários projetos, efetuando manutenções e configurações sistemas desenvolvidos em VB6, ASP e. NET SQL Server, IIS, configuração de rede.</p>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Sonda / Telefônica, Analista de Suporte Field</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2017 - Março 2022</h6>
-              <p>Realizando instalação e configuração de softwares, solução de problemas técnicos entre outros.</p><br>
+              <p>Realizando instalação e configuração de softwares, solução de problemas técnicos entre outros.</p>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Fractalia / Telefônica, Analista de Suporte Field</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril 2022 - Atualmente</h6>
+              <p>Analista de Suporte, responsável pela área de suporte, Servidores, Backups, solucionar problemas técnicos. Efetuando suporte técnico a usuários internos, realizando montagem e manutenção de equipamentos, 
+                acesso a pastas em servidores de Backups e hardwares, instalação e configuração de softwares.</p><br>
             </div>
           </div>
   
