--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Secom do Brasil, Analista de Suporte</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro - 2011 - Março - 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-              <p>fetuando suporte técnico interno e em campo em equipamentos e softwares customizados em
-                vários projetos, efetuando manutenções e configurações sistemas desenvolvidos em VB6, ASP e. NET SQL Server, IIS, configuração de rede.</p>
+              <h5 class="w3-opacity"><b>Fractalia / Telefônica, Analista de Suporte Field</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril 2022 <span class="w3-tag w3-teal w3-round">Atualmente</span></h6>
+              <p>Analista de Suporte, responsável pela área de suporte, Servidores, Backups, solucionar problemas técnicos. Efetuando suporte técnico a usuários internos, realizando montagem e manutenção de equipamentos, 
+                acesso a pastas em servidores de Backups e hardwares, instalação e configuração de softwares.</p>
               <hr>
             </div>
             <div class="w3-container">
@@ -103,10 +103,10 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Fractalia / Telefônica, Analista de Suporte Field</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril 2022 - Atualmente</h6>
-              <p>Analista de Suporte, responsável pela área de suporte, Servidores, Backups, solucionar problemas técnicos. Efetuando suporte técnico a usuários internos, realizando montagem e manutenção de equipamentos, 
-                acesso a pastas em servidores de Backups e hardwares, instalação e configuração de softwares.</p><br>
+              <h5 class="w3-opacity"><b>Secom do Brasil, Analista de Suporte Junior</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro 2011 - Maio - 2015</h6>
+              <p>Efetuando suporte técnico interno e em campo em equipamentos e softwares customizados em
+                vários projetos, efetuando manutenções e configurações sistemas desenvolvidos em VB6, ASP e. NET SQL Server, IIS, configuração de rede.</p><br>
             </div>
           </div>
   
@@ -114,21 +114,27 @@
             <h2 class="w3-text-grey w3-padding-16"><i
                 class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">Forever</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>CENTRO UNIVERSITÁRIO ANHAGUERA</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round"></span></h6>
+              <p>Completo – Superior de tecnologia em analise e desenvolvimento de sistemas</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h5 class="w3-opacity"><b>
+                Udemy - Java COMPLETO 2023 Programação Orientada Objetos</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-              <p>TODO</p>
+              <p>Programação orientada a objetos, Lógica de programação e algoritmos, Sintaxe da linguagem Java, Classes, atributos e métodos,
+               Construtores, sobrecarga, encapsulamento, Estruturas de dados: arrays e coleções, Enumerações, composição, erança, polimorfismo, interfaces,
+               Tratamento de exceções, Generics, Programação funcional e expressões lambda, Stream API e Manipulação de arquivos.
+            
+              </p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h5 class="w3-opacity"><b>Udemy - Java COMPLETO 2023 Projetos</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p><br>
+              <p>JDBC para acesso a dados baseado em SQL, JavaFX para interface gráfica, Git / Github, Spring Boot, JPA - Hibernate, Maven,
+                Spring Data JPA e Spring Data MongoDB.</p><br>
             </div>
           </div>
   
