--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:5%">5%</div>
               </div>
-              <p>github</p>
+              <p>Github</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:20%">20%</div>
               </div>
@@ -115,14 +115,18 @@
                 class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>CENTRO UNIVERSITÁRIO ANHAGUERA</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round"></span></h6>
-              <p>Completo – Superior de tecnologia em analise e desenvolvimento de sistemas</p>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right">Fevereiro - 2021, Dezembro - 2022</i><span class="w3-tag w3-teal w3-round"></span></h6>
+              <p>Completo – Superior de tecnologia em analise e desenvolvimento de sistemas
+                <ul>
+                  <li><a href="TODO_ LINK_CERTIFICADO" targret="_blank">Formação academica na Faculdade Anhanguera</a>/li>
+                </ul>
+              </p>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>
                 Udemy - Java COMPLETO 2023 Programação Orientada Objetos</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março - 2022 - <span class="w3-tag w3-teal w3-round">Atualmente</span></h6>
               <p>Programação orientada a objetos, Lógica de programação e algoritmos, Sintaxe da linguagem Java, Classes, atributos e métodos,
                Construtores, sobrecarga, encapsulamento, Estruturas de dados: arrays e coleções, Enumerações, composição, erança, polimorfismo, interfaces,
                Tratamento de exceções, Generics, Programação funcional e expressões lambda, Stream API e Manipulação de arquivos.
@@ -132,7 +136,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Udemy - Java COMPLETO 2023 Projetos</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março - 2022 - Atualmente</h6>
               <p>JDBC para acesso a dados baseado em SQL, JavaFX para interface gráfica, Git / Github, Spring Boot, JPA - Hibernate, Maven,
                 Spring Data JPA e Spring Data MongoDB.</p><br>
             </div>
