--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>CENTRO UNIVERSITÁRIO ANHAGUERA</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right">Fevereiro - 2021, Dezembro - 2022</i><span class="w3-tag w3-teal w3-round"></span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro - 2021, Dezembro - 2022<span class="w3-tag w3-teal w3-round"></span></h6>
               <p>Completo – Superior de tecnologia em analise e desenvolvimento de sistemas
                 <ul>
                   <li><a href="TODO_ LINK_CERTIFICADO" targret="_blank">Formação academica na Faculdade Anhanguera</a>/li>
