--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Udemy - Java COMPLETO 2023 Projetos</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março - 2022 - Atualmente</h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março - 2022 - <span class="w3-tag w3-teal w3-round">Atualmente</span><</h6>
               <p>JDBC para acesso a dados baseado em SQL, JavaFX para interface gráfica, Git / Github, Spring Boot, JPA - Hibernate, Maven,
                 Spring Data JPA e Spring Data MongoDB.</p><br>
             </div>
